# SlicerCore

./: README.md  apply_patch.py
.github/workflows/: build-wheels-mac.yml  build-wheels-windows.yml  build-wheels.yml  cd.yml  ci.yml
patch/: CMakeLists.txt  pyproject.toml
patch/Base/Logic/: CMakeLists.txt  vtk.module  vtkSlicerBaseLogicExport.h.patch
patch/CMake/: SlicerCoreBuildConfiguration.cmake  SlicerCoreModuleWrapper.cmake  SlicerCoreSuperbuild.cmake
patch/Libs/MRML/CLI/: CMakeLists.txt  vtkMRMLCommandLineModuleNode.h.patch
patch/Libs/MRML/Core/: CMakeLists.txt  vtk.module  vtkMRMLExport.h.patch  vtkMRMLMarkupsFiducialStorageNode.cxx.patch
patch/Libs/MRML/DisplayableManager/: CMakeLists.txt  vtk.module  vtkMRMLDisplayableManagerExport.h.patch
patch/Libs/MRML/Logic/: CMakeLists.txt  vtkMRMLLogicExport.h.patch
patch/Libs/RemoteIO/: CMakeLists.txt  vtkRemoteIOExport.h.patch
patch/Libs/vtkITK/: CMakeLists.txt  vtkITKExport.h.patch
patch/Libs/vtkSegmentationCore/: CMakeLists.txt  vtkSegmentationCoreConfigure.h.in.patch
patch/Libs/vtkTeem/: CMakeLists.txt  vtkTeemConfigure.h.in.patch
patch/Modules/Loadable/Colors/: qSlicerColorsModule.cxx.patch
patch/Modules/Loadable/Markups/MRML/: CMakeLists.txt
patch/Modules/Loadable/Terminologies/Logic/: CMakeLists.txt
patch/Modules/Loadable/Transforms/Logic/: CMakeLists.txt
patch/Modules/Loadable/VolumeRendering/MRML/: CMakeLists.txt
patch/Modules/Loadable/Volumes/Logic/: CMakeLists.txt
patch/SlicerCore/: pyproject.toml
patch/SlicerCoreSDK/: pyproject.toml
patch/SuperBuild/: External_vtkAddon.cmake
workflows/: ci.yml
